gccida/c0/do_jump_by_parts_equality
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10301:30: error: invalid suffix 'orce' on integer constant
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)mode); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10301:46: error: use of undeclared identifier 'machine_mode'
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)mode); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10301:6: error: use of undeclared identifier 'operand_sub'
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)mode); 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10302:30: error: invalid suffix 'orce' on integer constant
v4 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)mode); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10302:46: error: use of undeclared identifier 'machine_mode'
v4 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)mode); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10302:6: error: use of undeclared identifier 'operand_sub'
v4 = operand_sub*(short *)0xforce( op1, i, ( machine_mode)mode); 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/expr.c:10308:12: error: invalid suffix 'xmode' on integer constant
*(short *)0xmode, 
           ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality/src/obj/expr.o] Error 1
